workspaces/controller/manifests/kustomize/components/istio/namespace_patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow-workspaces
  labels:
    # enabling istio sidecar injection for the namespace
    istio-injection: enabled
